updates alt tags

--- a/competitions.html
+++ b/competitions.html
@@ -69,7 +69,7 @@
   <!-- ======= Header ======= -->
   <header id="header" class="fixed-top">
     <div class="container-fluid d-flex align-items-center justify-content-between">
-      <a href="/" id="header-sjsu-robotics" class="logo active"><img src="assets/img/favicon.png" alt=""
+      <a href="/" id="header-sjsu-robotics" class="logo active"><img src="assets/img/favicon.png" alt="logo"
           class="img-fluid">SJSU Robotics</a>
       <nav class="nav-menu d-none d-lg-block">
         <ul>
@@ -118,7 +118,7 @@
           <div class="member" data-aos="fade-up" data-aos-delay="100">
             <div class="pic">
               <div class="img-container">
-                <img src="assets/img/gallery/2019-competition.jpeg" class="img-fluid" alt="" />
+                <img src="assets/img/gallery/2019-competition.jpeg" class="img-fluid" alt="2019-competition" />
               </div>
             </div>
             <div class="member-info">
@@ -141,7 +141,7 @@
           <div class="member" data-aos="fade-up" data-aos-delay="100">
             <div class="pic">
               <div class="img-container">
-                <img src="assets/img/gallery/2018-competition.jpeg" class="img-fluid" alt="" />
+                <img src="assets/img/gallery/2018-competition.jpeg" class="img-fluid" alt="2018-competition" />
               </div>
             </div>
             <div class="member-info">
@@ -164,7 +164,7 @@
           <div class="member" data-aos="fade-up" data-aos-delay="100">
             <div class="pic">
               <div class="img-container">
-                <img src="assets/img/gallery/2017-competition.jpeg" class="img-fluid" alt="" />
+                <img src="assets/img/gallery/2017-competition.jpeg" class="img-fluid" alt="2017-competition" />
               </div>
             </div>
             <div class="member-info">
@@ -187,7 +187,7 @@
           <div class="member" data-aos="fade-up" data-aos-delay="100">
             <div class="pic">
               <div class="img-container">
-                <img src="assets/img/gallery/2016-competition.jpeg" class="img-fluid" alt="" />
+                <img src="assets/img/gallery/2016-competition.jpeg" class="img-fluid" alt="2016-competition" />
               </div>
             </div>
             <div class="member-info">
@@ -209,7 +209,7 @@
           <div class="member" data-aos="fade-up" data-aos-delay="100">
             <div class="pic">
               <div class="img-container">
-                <img src="assets/img/gallery/2015-competition.jpeg" class="img-fluid" alt="" />
+                <img src="assets/img/gallery/2015-competition.jpeg" class="img-fluid" alt="2015-competition" />
               </div>
             </div>
             <div class="member-info">
