--- a/past-leads.html
+++ b/past-leads.html
@@ -51,8 +51,8 @@
   <!-- ======= Header ======= -->
   <header id="header" class="fixed-top">
     <div class="container-fluid d-flex align-items-center justify-content-between">
-      <a href="/" id="header-sjsu-robotics" class="logo active"><img src="assets/img/favicon.png" alt=""
-          class="img-fluid">SJSU Robotics</a>
+      <a href="/" id="header-sjsu-robotics" class="logo active"><img src="assets/img/favicon.png"
+          alt="SJSU Robotics logo" class="img-fluid">SJSU Robotics</a>
       <nav class="nav-menu d-none d-lg-block">
         <ul>
           <li><a href="/">Home</a></li>
@@ -92,7 +92,7 @@
                 <div class="col-lg-2">
                   <div class="member" data-aos="fade-up" data-aos-delay="100">
                     <div class="pic">
-                      <img src="assets/img/leads/mason-sage.png" class="img-fluid" alt="" />
+                      <img src="assets/img/leads/mason-sage.png" class="img-fluid" alt="Picture of former lead" />
                     </div>
                     <div class="member-info">
                       <h4>Mason Sage</h4>
@@ -104,7 +104,7 @@
                 <div class="col-lg-2">
                   <div class="member" data-aos="fade-up" data-aos-delay="100">
                     <div class="pic">
-                      <img src="assets/img/leads/vishnu-adda.png" class="img-fluid" alt="" />
+                      <img src="assets/img/leads/vishnu-adda.png" class="img-fluid" alt="Picture of former lead" />
                     </div>
                     <div class="member-info">
                       <h4>Vishnu Adda</h4>
@@ -117,7 +117,7 @@
                 <div class="col-lg-2">
                   <div class="member" data-aos="fade-up" data-aos-delay="100">
                     <div class="pic">
-                      <img src="assets/img/leads/empty.png" class="img-fluid" alt="" />
+                      <img src="assets/img/leads/empty.png" class="img-fluid" alt="Picture of former lead" />
                     </div>
                     <div class="member-info">
                       <h4></h4>
@@ -129,7 +129,7 @@
                 <div class="col-lg-2">
                   <div class="member" data-aos="fade-up" data-aos-delay="100">
                     <div class="pic">
-                      <img src="assets/img/leads/empty.png" class="img-fluid" alt="" />
+                      <img src="assets/img/leads/empty.png" class="img-fluid" alt="Picture of former lead" />
                     </div>
                     <div class="member-info">
                       <h4></h4>
@@ -141,7 +141,7 @@
                 <div class="col-lg-2">
                   <div class="member" data-aos="fade-up" data-aos-delay="100">
                     <div class="pic">
-                      <img src="assets/img/leads/santosh-dasari.png" class="img-fluid" alt="" />
+                      <img src="assets/img/leads/santosh-dasari.png" class="img-fluid" alt="Picture of former lead" />
                     </div>
                     <div class="member-info">
                       <h4>Santosh Dasari</h4>
@@ -154,7 +154,7 @@
                 <div class="col-lg-2">
                   <div class="member" data-aos="fade-up" data-aos-delay="100">
                     <div class="pic">
-                      <img src="assets/img/leads/maxim-vovenko.png" class="img-fluid" alt="" />
+                      <img src="assets/img/leads/maxim-vovenko.png" class="img-fluid" alt="Picture of former lead" />
                     </div>
                     <div class="member-info">
                       <h4>Maxim Vovenko</h4>
@@ -166,7 +166,7 @@
                 <div class="col-lg-2">
                   <div class="member" data-aos="fade-up" data-aos-delay="100">
                     <div class="pic">
-                      <img src="assets/img/leads/nathanael-garza.png" class="img-fluid" alt="" />
+                      <img src="assets/img/leads/nathanael-garza.png" class="img-fluid" alt="Picture of former lead" />
                     </div>
                     <div class="member-info">
                       <h4>Nathanael Garza</h4>
@@ -178,7 +178,7 @@
                 <div class="col-lg-2">
                   <div class="member" data-aos="fade-up" data-aos-delay="100">
                     <div class="pic">
-                      <img src="assets/img/leads/vishnu-adda.png" class="img-fluid" alt="" />
+                      <img src="assets/img/leads/vishnu-adda.png" class="img-fluid" alt="Picture of former lead" />
                     </div>
                     <div class="member-info">
                       <h4>Vishnu Adda</h4>
@@ -190,7 +190,7 @@
                 <div class="col-lg-2">
                   <div class="member" data-aos="fade-up" data-aos-delay="100">
                     <div class="pic">
-                      <img src="assets/img/leads/mason-sage.png" class="img-fluid" alt="" />
+                      <img src="assets/img/leads/mason-sage.png" class="img-fluid" alt="Picture of former lead" />
                     </div>
                     <div class="member-info">
                       <h4>Mason Sage</h4>
@@ -207,7 +207,7 @@
                 <div class="col-lg-2">
                   <div class="member" data-aos="fade-up" data-aos-delay="100">
                     <div class="pic">
-                      <img src="assets/img/leads/david-dias.png" class="img-fluid" alt="" />
+                      <img src="assets/img/leads/david-dias.png" class="img-fluid" alt="Picture of former lead" />
                     </div>
                     <div class="member-info">
                       <h4>David Dias</h4>
@@ -219,7 +219,7 @@
                 <div class="col-lg-2">
                   <div class="member" data-aos="fade-up" data-aos-delay="100">
                     <div class="pic">
-                      <img src="assets/img/leads/vishnu-adda.png" class="img-fluid" alt="" />
+                      <img src="assets/img/leads/vishnu-adda.png" class="img-fluid" alt="Picture of former lead" />
                     </div>
                     <div class="member-info">
                       <h4>Vishnu Adda</h4>
@@ -232,7 +232,8 @@
                 <div class="col-lg-2">
                   <div class="member" data-aos="fade-up" data-aos-delay="100">
                     <div class="pic">
-                      <img src="assets/img/leads/gabrielle-dominguez.png" class="img-fluid" alt="" />
+                      <img src="assets/img/leads/gabrielle-dominguez.png" class="img-fluid"
+                        alt="Picture of former lead" />
                     </div>
                     <div class="member-info">
                       <h4>Gabrielle Dominguez</h4>
@@ -244,7 +245,7 @@
                 <div class="col-lg-2">
                   <div class="member" data-aos="fade-up" data-aos-delay="100">
                     <div class="pic">
-                      <img src="assets/img/leads/default.png" class="img-fluid" alt="" />
+                      <img src="assets/img/leads/default.png" class="img-fluid" alt="Picture of former lead" />
                     </div>
                     <div class="member-info">
                       <h4>Richard Ngo</h4>
@@ -256,7 +257,7 @@
                 <div class="col-lg-2">
                   <div class="member" data-aos="fade-up" data-aos-delay="100">
                     <div class="pic">
-                      <img src="assets/img/leads/david-dias.png" class="img-fluid" alt="" />
+                      <img src="assets/img/leads/david-dias.png" class="img-fluid" alt="Picture of former lead" />
                     </div>
                     <div class="member-info">
                       <h4>David Dias</h4>
@@ -269,7 +270,7 @@
                 <div class="col-lg-2">
                   <div class="member" data-aos="fade-up" data-aos-delay="100">
                     <div class="pic">
-                      <img src="assets/img/leads/quan-le.png" class="img-fluid" alt="" />
+                      <img src="assets/img/leads/quan-le.png" class="img-fluid" alt="Picture of former lead" />
                     </div>
                     <div class="member-info">
                       <h4>Quan Le</h4>
@@ -281,7 +282,7 @@
                 <div class="col-lg-2">
                   <div class="member" data-aos="fade-up" data-aos-delay="100">
                     <div class="pic">
-                      <img src="assets/img/leads/nathanael-garza.png" class="img-fluid" alt="" />
+                      <img src="assets/img/leads/nathanael-garza.png" class="img-fluid" alt="Picture of former lead" />
                     </div>
                     <div class="member-info">
                       <h4>Nathanael Garza</h4>
@@ -293,7 +294,7 @@
                 <div class="col-lg-2">
                   <div class="member" data-aos="fade-up" data-aos-delay="100">
                     <div class="pic">
-                      <img src="assets/img/leads/vishnu-adda.png" class="img-fluid" alt="" />
+                      <img src="assets/img/leads/vishnu-adda.png" class="img-fluid" alt="Picture of former lead" />
                     </div>
                     <div class="member-info">
                       <h4>Vishnu Adda</h4>
@@ -305,7 +306,7 @@
                 <div class="col-lg-2">
                   <div class="member" data-aos="fade-up" data-aos-delay="100">
                     <div class="pic">
-                      <img src="assets/img/leads/pushpal-patil.png" class="img-fluid" alt="" />
+                      <img src="assets/img/leads/pushpal-patil.png" class="img-fluid" alt="Picture of former lead" />
                     </div>
                     <div class="member-info">
                       <h4>Pushpal Patil</h4>
@@ -322,7 +323,7 @@
                 <div class="col-lg-2">
                   <div class="member" data-aos="fade-up" data-aos-delay="100">
                     <div class="pic">
-                      <img src="assets/img/leads/colin-schardt.png" class="img-fluid" alt="" />
+                      <img src="assets/img/leads/colin-schardt.png" class="img-fluid" alt="Picture of former lead" />
                     </div>
                     <div class="member-info">
                       <h4>Colin Schardt</h4>
@@ -334,7 +335,7 @@
                 <div class="col-lg-2">
                   <div class="member" data-aos="fade-up" data-aos-delay="100">
                     <div class="pic">
-                      <img src="assets/img/leads/default.png" class="img-fluid" alt="" />
+                      <img src="assets/img/leads/default.png" class="img-fluid" alt="Picture of former lead" />
                     </div>
                     <div class="member-info">
                       <h4>Smruthi Danda</h4>
@@ -347,7 +348,7 @@
                 <div class="col-lg-2">
                   <div class="member" data-aos="fade-up" data-aos-delay="100">
                     <div class="pic">
-                      <img src="assets/img/leads/empty.png" class="img-fluid" alt="" />
+                      <img src="assets/img/leads/empty.png" class="img-fluid" alt="Picture of former lead" />
                     </div>
                     <div class="member-info">
                       <h4></h4>
@@ -359,7 +360,7 @@
                 <div class="col-lg-2">
                   <div class="member" data-aos="fade-up" data-aos-delay="100">
                     <div class="pic">
-                      <img src="assets/img/leads/default.png" class="img-fluid" alt="" />
+                      <img src="assets/img/leads/default.png" class="img-fluid" alt="Picture of former lead" />
                     </div>
                     <div class="member-info">
                       <h4>Richard Ngo</h4>
@@ -371,7 +372,7 @@
                 <div class="col-lg-2">
                   <div class="member" data-aos="fade-up" data-aos-delay="100">
                     <div class="pic">
-                      <img src="assets/img/leads/david-dias.png" class="img-fluid" alt="" />
+                      <img src="assets/img/leads/david-dias.png" class="img-fluid" alt="Picture of former lead" />
                     </div>
                     <div class="member-info">
                       <h4>David Dias</h4>
@@ -384,7 +385,7 @@
                 <div class="col-lg-2">
                   <div class="member" data-aos="fade-up" data-aos-delay="100">
                     <div class="pic">
-                      <img src="assets/img/leads/default.png" class="img-fluid" alt="" />
+                      <img src="assets/img/leads/default.png" class="img-fluid" alt="Picture of former lead" />
                     </div>
                     <div class="member-info">
                       <h4>Smruthi Danda</h4>
@@ -396,7 +397,7 @@
                 <div class="col-lg-2">
                   <div class="member" data-aos="fade-up" data-aos-delay="100">
                     <div class="pic">
-                      <img src="assets/img/leads/evan-ugarte.png" class="img-fluid" alt="" />
+                      <img src="assets/img/leads/evan-ugarte.png" class="img-fluid" alt="Picture of former lead" />
                     </div>
                     <div class="member-info">
                       <h4>Evan Ugarte</h4>
@@ -408,7 +409,7 @@
                 <div class="col-lg-2">
                   <div class="member" data-aos="fade-up" data-aos-delay="100">
                     <div class="pic">
-                      <img src="assets/img/leads/vishnu-adda.png" class="img-fluid" alt="" />
+                      <img src="assets/img/leads/vishnu-adda.png" class="img-fluid" alt="Picture of former lead" />
                     </div>
                     <div class="member-info">
                       <h4>Vishnu Addda</h4>
@@ -420,7 +421,7 @@
                 <div class="col-lg-2">
                   <div class="member" data-aos="fade-up" data-aos-delay="100">
                     <div class="pic">
-                      <img src="assets/img/leads/yosef-mirsky.png" class="img-fluid" alt="" />
+                      <img src="assets/img/leads/yosef-mirsky.png" class="img-fluid" alt="Picture of former lead" />
                     </div>
                     <div class="member-info">
                       <h4>Yosef Mirsky</h4>
@@ -437,7 +438,7 @@
                 <div class="col-lg-2">
                   <div class="member" data-aos="fade-up" data-aos-delay="100">
                     <div class="pic">
-                      <img src="assets/img/leads/ari-koumis.png" class="img-fluid" alt="" />
+                      <img src="assets/img/leads/ari-koumis.png" class="img-fluid" alt="Picture of former lead" />
                     </div>
                     <div class="member-info">
                       <h4>Ari Koumis</h4>
@@ -449,7 +450,7 @@
                 <div class="col-lg-2">
                   <div class="member" data-aos="fade-up" data-aos-delay="100">
                     <div class="pic">
-                      <img src="assets/img/leads/keven-gallegos.png" class="img-fluid" alt="" />
+                      <img src="assets/img/leads/keven-gallegos.png" class="img-fluid" alt="Picture of former lead" />
                     </div>
                     <div class="member-info">
                       <h4>Keven Gallegos</h4>
@@ -462,7 +463,7 @@
                 <div class="col-lg-2">
                   <div class="member" data-aos="fade-up" data-aos-delay="100">
                     <div class="pic">
-                      <img src="assets/img/leads/keven-gallegos.png" class="img-fluid" alt="" />
+                      <img src="assets/img/leads/keven-gallegos.png" class="img-fluid" alt="Picture of former lead" />
                     </div>
                     <div class="member-info">
                       <h4>Keven Gallegos</h4>
@@ -474,7 +475,8 @@
                 <div class="col-lg-2">
                   <div class="member" data-aos="fade-up" data-aos-delay="100">
                     <div class="pic">
-                      <img src="assets/img/leads/lillith-gillespie.png" class="img-fluid" alt="" />
+                      <img src="assets/img/leads/lillith-gillespie.png" class="img-fluid"
+                        alt="Picture of former lead" />
                     </div>
                     <div class="member-info">
                       <h4>Lillith Gillespie</h4>
@@ -486,7 +488,7 @@
                 <div class="col-lg-2">
                   <div class="member" data-aos="fade-up" data-aos-delay="100">
                     <div class="pic">
-                      <img src="assets/img/leads/jonathon-nguyen.png" class="img-fluid" alt="" />
+                      <img src="assets/img/leads/jonathon-nguyen.png" class="img-fluid" alt="Picture of former lead" />
                     </div>
                     <div class="member-info">
                       <h4>Jonathon Nguyen</h4>
@@ -499,7 +501,8 @@
                 <div class="col-lg-2">
                   <div class="member" data-aos="fade-up" data-aos-delay="100">
                     <div class="pic">
-                      <img src="assets/img/leads/nathaniel-ciceron.png" class="img-fluid" alt="" />
+                      <img src="assets/img/leads/nathaniel-ciceron.png" class="img-fluid"
+                        alt="Picture of former lead" />
                     </div>
                     <div class="member-info">
                       <h4>Nathaniel Ciceron</h4>
@@ -511,7 +514,7 @@
                 <div class="col-lg-2">
                   <div class="member" data-aos="fade-up" data-aos-delay="100">
                     <div class="pic">
-                      <img src="assets/img/leads/colin-schardt.png" class="img-fluid" alt="" />
+                      <img src="assets/img/leads/colin-schardt.png" class="img-fluid" alt="Picture of former lead" />
                     </div>
                     <div class="member-info">
                       <h4>Colin Schardt</h4>
@@ -523,7 +526,7 @@
                 <div class="col-lg-2">
                   <div class="member" data-aos="fade-up" data-aos-delay="100">
                     <div class="pic">
-                      <img src="assets/img/leads/evan-ugarte.png" class="img-fluid" alt="" />
+                      <img src="assets/img/leads/evan-ugarte.png" class="img-fluid" alt="Picture of former lead" />
                     </div>
                     <div class="member-info">
                       <h4>Evan Ugarte</h4>
@@ -535,7 +538,7 @@
                 <div class="col-lg-2">
                   <div class="member" data-aos="fade-up" data-aos-delay="100">
                     <div class="pic">
-                      <img src="assets/img/leads/default.png" class="img-fluid" alt="" />
+                      <img src="assets/img/leads/default.png" class="img-fluid" alt="Picture of former lead" />
                     </div>
                     <div class="member-info">
                       <h4>Nelson</h4>
