--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -68,8 +68,8 @@
   <!-- ======= Header ======= -->
   <header id="header" class="fixed-top">
     <div class="container-fluid d-flex align-items-center justify-content-between">
-      <a href="/" id="header-sjsu-robotics" class="logo active"><img src="assets/img/favicon.png" alt=""
-          class="img-fluid">SJSU Robotics</a>
+      <a href="/" id="header-sjsu-robotics" class="logo active"><img src="assets/img/favicon.png"
+          alt="SJSU Robotics logo" class="img-fluid" />SJSU Robotics</a>
       <nav class="nav-menu d-none d-lg-block">
         <ul>
           <li><a href="/">Home</a></li>
