--- a/gallery.html
+++ b/gallery.html
@@ -69,7 +69,7 @@
   <!-- ======= Header ======= -->
   <header id="header" class="fixed-top">
     <div class="container-fluid d-flex align-items-center justify-content-between">
-      <a href="/" id="header-sjsu-robotics" class="logo active"><img src="assets/img/favicon.png" alt=""
+      <a href="/" id="header-sjsu-robotics" class="logo active"><img src="assets/img/favicon.png" alt="logo"
           class="img-fluid">SJSU Robotics</a>
       <nav class="nav-menu d-none d-lg-block">
         <ul>
