--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
   <!-- ======= Header ======= -->
   <header id="header" class="fixed-top ">
     <div class="container-fluid d-flex align-items-center justify-content-between">
-      <a href="/" id="header-sjsu-robotics" class="logo active"><img src="assets/img/favicon.png" alt=""
+      <a href="/" id="header-sjsu-robotics" class="logo active"><img src="assets/img/favicon.png" alt="logo"
           class="img-fluid">SJSU Robotics</a>
 
       <nav class="nav-menu d-none d-lg-block">
@@ -116,7 +116,7 @@
     <div class="home-container" data-aos="fade-up" data-aos-delay="150">
       <h1 id="slogan">SJSU Robotics</h1>
       <br>
-      <a><img src="assets/img/favicon.png" alt="" class="img-fluid" width="150" height="146"></a>
+      <a><img src="assets/img/favicon.png" alt="SJSU Robotics logo" class="img-fluid" width="150" height="146"></a>
       <br>
       <h2 id="sub-slogan">A group of students at San Jose State University</h2>
       <div class="d-flex">
@@ -141,7 +141,8 @@
         <div class="row">
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
             <div class="card">
-              <img src="assets/img/aboutBoxes/about-box-project.jpeg" class="card-img-top" alt="...">
+              <img src="assets/img/aboutBoxes/about-box-project.jpeg" class="card-img-top"
+                alt="Rover with SJSU Robotics flag">
               <div class="card-body">
                 <h5 class="card-title"><a>Current Project</a></h5>
                 <p class="card-text">This year the team is aiming to compete in the <b>2023 University Rover
@@ -154,7 +155,8 @@
           </div>
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
             <div class="card">
-              <img src="assets/img/aboutBoxes/about-box-join.jpeg" class="card-img-top" alt="...">
+              <img src="assets/img/aboutBoxes/about-box-join.jpeg" class="card-img-top"
+                alt="Robotics members working together">
 
               <div class="card-body">
                 <h5 class="card-title"><a>Who Can Join</a></h5>
@@ -169,7 +171,8 @@
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="300">
             <div class="card">
-              <img src="assets/img/aboutBoxes/about-box-team.jpeg" class="card-img-top" alt="...">
+              <img src="assets/img/aboutBoxes/about-box-team.jpeg" class="card-img-top"
+                alt="Robotics members around robotic arm">
               <div class="card-body">
                 <h5 class="card-title"><a>Our Team</a></h5>
                 <p class="card-text">We are multi-disciplinary robotics
@@ -209,7 +212,7 @@
               <div class="member" data-aos="fade-up" data-aos-delay="100">
                 <div class="pic">
                   <a href="https://www.linkedin.com/in/santosh-dasari/" target="_blank" rel="noopener noreferrer">
-                    <img src="assets/img/leads/santosh-dasari.png" class="img-fluid" alt="" />
+                    <img src="assets/img/leads/santosh-dasari.png" class="img-fluid" alt="Picture of club President" />
                   </a>
                 </div>
                 <div class="member-info">
@@ -223,7 +226,7 @@
               <div class="member" data-aos="fade-up" data-aos-delay="100">
                 <div class="pic">
                   <a href="https://www.linkedin.com/in/mattheward/" target="_blank" rel="noopener noreferrer">
-                    <img src="assets/img/leads/mattew-ard.png" class="img-fluid" alt="" />
+                    <img src="assets/img/leads/mattew-ard.png" class="img-fluid" alt="Picture of club Treasurer" />
                   </a>
                 </div>
                 <div class="member-info">
@@ -239,7 +242,7 @@
               <div class="member" data-aos="fade-up" data-aos-delay="100">
                 <div class="pic">
                   <a href="https://www.linkedin.com/in/shveta-ram-42357121b/" target="_blank" rel="noopener noreferrer">
-                    <img src="assets/img/leads/shveta-ram.png" class="img-fluid" alt="" />
+                    <img src="assets/img/leads/shveta-ram.png" class="img-fluid" alt="Picture of Business lead" />
                   </a>
                 </div>
                 <div class="member-info">
@@ -253,7 +256,8 @@
               <div class="member" data-aos="fade-up" data-aos-delay="100">
                 <div class="pic">
                   <a href="https://www.linkedin.com/in/ashleym-mercurio/" target="_blank" rel="noopener noreferrer">
-                    <img src="assets/img/leads/ashley-marie-mercurio.png" class="img-fluid" alt="" />
+                    <img src="assets/img/leads/ashley-marie-mercurio.png" class="img-fluid"
+                      alt="Picture of Science lead" />
                   </a>
                 </div>
                 <div class="member-info">
@@ -267,7 +271,7 @@
               <div class="member" data-aos="fade-up" data-aos-delay="100">
                 <div class="pic">
                   <a href="https://www.linkedin.com/in/marco-koch-011a031b1/" target="_blank" rel="noopener noreferrer">
-                    <img src="assets/img/leads/marco-koch.png" class="img-fluid" alt="" />
+                    <img src="assets/img/leads/marco-koch.png" class="img-fluid" alt="Picture of Mechanical lead" />
                   </a>
                 </div>
                 <div class="member-info">
@@ -282,7 +286,8 @@
               <div class="member" data-aos="fade-up" data-aos-delay="100">
                 <div class="pic">
                   <a href="https://www.linkedin.com/in/bclaveria/" target="_blank" rel="noopener noreferrer">
-                    <img src="assets/img/leads/brandon-claveria.png" class="img-fluid" alt="" />
+                    <img src="assets/img/leads/brandon-claveria.png" class="img-fluid"
+                      alt="Picture of Electrical lead" />
                   </a>
                 </div>
                 <div class="member-info">
@@ -297,7 +302,8 @@
                 <div class="pic">
                   <a href="https://www.linkedin.com/in/corey-kelley-a08623230/" target="_blank"
                     rel="noopener noreferrer">
-                    <img src="assets/img/leads/corey-kelley.png" class="img-fluid" alt="" />
+                    <img src="assets/img/leads/corey-kelley.png" class="img-fluid"
+                      alt="Picture of Control Systems lead" />
                   </a>
                 </div>
                 <div class="member-info">
@@ -311,7 +317,8 @@
               <div class="member" data-aos="fade-up" data-aos-delay="100">
                 <div class="pic">
                   <a href="https://www.linkedin.com/in/nathanaelrgarza/" target="_blank" rel="noopener noreferrer">
-                    <img src="assets/img/leads/nathanael-garza.png" class="img-fluid" alt="" />
+                    <img src="assets/img/leads/nathanael-garza.png" class="img-fluid"
+                      alt="Picture of Mission Control lead" />
                   </a>
                 </div>
                 <div class="member-info">
@@ -325,7 +332,8 @@
               <div class="member" data-aos="fade-up" data-aos-delay="100">
                 <div class="pic">
                   <a href="https://www.linkedin.com/in/adrien-carrou/" target="_blank" rel="noopener noreferrer">
-                    <img src="assets/img/leads/adrien-carrou.png" class="img-fluid" alt="" />
+                    <img src="assets/img/leads/adrien-carrou.png" class="img-fluid"
+                      alt="Picture of Intelligent Systems lead" />
                   </a>
                 </div>
                 <div class="member-info">
@@ -335,33 +343,6 @@
               </div>
             </div>
           </row>
-          <!-- <row class="general-row">
-            <div class="col-lg-11">
-              <div class="member" data-aos="fade-up" data-aos-delay="100">
-                <div class="pic">
-                  <img src="assets/img/gallery/current-team.jpeg" class="img-fluid" alt="" />
-                </div>
-                <div class="member-info">
-                  <h4>2023 Team</h4>
-                  <span>Updated Oct. 2022</span>
-                </div>
-              </div>
-            </div>
-          </row>
-
-          <row class="general-row">
-            <div class="col-lg-11">
-              <div class="member" data-aos="fade-up" data-aos-delay="100">
-                <div class="pic">
-                  <img src="assets/img/gallery/current-leads.jpeg" class="img-fluid" alt="" />
-                </div>
-                <div class="member-info">
-                  <h4>2023 Team</h4>
-                  <span>Updated Oct. 2022</span>
-                </div>
-              </div>
-            </div>
-          </row> -->
       </div>
     </section>
     <!-- ======= End Leads Section ======= -->
@@ -461,7 +442,6 @@
           }
         </style>
         <h2>Sponsors</h2>
-
         <row class="row">
           <div class="col-lg-3 col-md-4 col-6 d-flex align-items-center justify-content-center">
             <img src="assets/img/sponsors/SJSU-ENGR.png" class="img-fluid" alt="San Jose State Engineering Department">
@@ -501,37 +481,43 @@
       <div class="container" data-aos="zoom-in">
         <div class="owl-carousel gallery-carousel">
           <div class="gallery-item">
-            <img src="assets/img/gallery/current-team.jpeg" class="gallery-img" alt="">
+            <img src="assets/img/gallery/current-team.jpeg" class="gallery-img"
+              alt="Picture of current 2023 Robotics team">
             Current Robotics Team
           </div>
 
           <div class="gallery-item">
-            <img src="assets/img/gallery/current-leads.jpeg" class="gallery-img" alt="">
+            <img src="assets/img/gallery/current-leads.jpeg" class="gallery-img" alt="Picture of current 2023 Robotics leads>
             Current Team Leads
           </div>
 
-          <div class="gallery-item">
-            <img src="assets/img/gallery/2019-competition.jpeg" class="gallery-img" alt="">
+          <div class=" gallery-item">
+            <img src="assets/img/gallery/2019-competition.jpeg" class="gallery-img"
+              alt="Picture of 2019 competition team">
             2019 Competition Team
           </div>
 
           <div class="gallery-item">
-            <img src="assets/img/gallery/2018-competition.jpeg" class="gallery-img" alt="">
+            <img src="assets/img/gallery/2018-competition.jpeg" class="gallery-img"
+              alt="Picture of 2018 competition team">
             2018 Competition Team
           </div>
 
           <div class="gallery-item">
-            <img src="assets/img/gallery/2017-competition.jpeg" class="gallery-img" alt="">
+            <img src="assets/img/gallery/2017-competition.jpeg" class="gallery-img"
+              alt="Picture of 2017 competition team">
             2017 Competition Team
           </div>
 
           <div class="gallery-item">
-            <img src="assets/img/gallery/2016-competition.jpeg" class="gallery-img" alt="">
+            <img src="assets/img/gallery/2016-competition.jpeg" class="gallery-img"
+              alt="Picture of 2016 competition team">
             2016 Competition Team
           </div>
 
           <div class="gallery-item">
-            <img src="assets/img/gallery/2015-competition.jpeg" class="gallery-img" alt="">
+            <img src="assets/img/gallery/2015-competition.jpeg" class="gallery-img"
+              alt="Picture of 2015 competition team">
             2015 Competition Team
           </div>
 
