updates images, removes unused images, adds newer images

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
         <div class="row">
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
             <div class="card">
-              <img src="assets/img/aboutBoxes/about-box-project.jpeg" class="card-img-top"
+              <img src="assets/img/aboutBoxes/current-project.jpeg" class="card-img-top"
                 alt="Rover with SJSU Robotics flag">
               <div class="card-body">
                 <h5 class="card-title"><a>Current Project</a></h5>
@@ -155,7 +155,7 @@
           </div>
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
             <div class="card">
-              <img src="assets/img/aboutBoxes/about-box-join.jpeg" class="card-img-top"
+              <img src="assets/img/aboutBoxes/who-can-join.jpg" class="card-img-top"
                 alt="Robotics members working together">
 
               <div class="card-body">
@@ -163,7 +163,7 @@
                 <p class="card-text">
                   We welcome students from all majors and backgrounds.
                   We strive to create a diverse team that is inclusive, welcoming, and respectful of all.
-                  We want people who are dedicated to learning and growing as a team.
+                  We want members who are dedicated to learning and working together.
                 </p>
               </div>
             </div>
@@ -171,7 +171,7 @@
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="300">
             <div class="card">
-              <img src="assets/img/aboutBoxes/about-box-team.jpeg" class="card-img-top"
+              <img src="assets/img/aboutBoxes/our-team.jpg" class="card-img-top"
                 alt="Robotics members around robotic arm">
               <div class="card-body">
                 <h5 class="card-title"><a>Our Team</a></h5>
@@ -393,7 +393,7 @@
               <div class="col-lg-3 col-md-5 col-6 d-md-flex align-items-md-stretch">
                 <div class="count-box">
                   <i class="icofont-brain"></i>
-                  <span data-toggle="counter-up">3</span>
+                  <span data-toggle="counter-up">4</span>
                   <p>Intelligent Systems</p>
                 </div>
               </div>
@@ -401,7 +401,7 @@
               <div class="col-lg-3 col-md-5 col-6 d-md-flex align-items-md-stretch">
                 <div class="count-box">
                   <i class="icofont-computer"></i>
-                  <span data-toggle="counter-up">2</span>
+                  <span data-toggle="counter-up">3</span>
                   <p>Mission Control</p>
                 </div>
               </div>
@@ -409,7 +409,7 @@
               <div class="col-lg-3 col-md-5 col-6 d-md-flex align-items-md-stretch">
                 <div class="count-box">
                   <i class="icofont-dashboard-web"></i>
-                  <span data-toggle="counter-up">1</span>
+                  <span data-toggle="counter-up">2</span>
                   <p>Business</p>
                 </div>
               </div>
@@ -429,53 +429,6 @@
     </section>
     <!-- ======= End About Section ======= -->
 
-    <!-- ======= Sponsors Section ======= -->
-    <section id="sponsors" class="sponsors">
-      <div class="container" data-aos="zoom-in">
-        <style>
-          h2 {
-            text-align: center;
-          }
-
-          h6 {
-            text-align: center;
-          }
-        </style>
-        <h2>Sponsors</h2>
-        <row class="row">
-          <div class="col-lg-3 col-md-4 col-6 d-flex align-items-center justify-content-center">
-            <img src="assets/img/sponsors/SJSU-ENGR.png" class="img-fluid" alt="San Jose State Engineering Department">
-          </div>
-
-          <div class="col-lg-3 col-md-4 col-6 d-flex align-items-center justify-content-center">
-            <img src="assets/img/sponsors/SJSU-AS.png" class="img-fluid" alt="SJSU Associated Students">
-          </div>
-
-          <div class="col-lg-3 col-md-4 col-6 d-flex align-items-center justify-content-center">
-            <img src="assets/img/sponsors/google.png" class="img-fluid" alt="Google">
-          </div>
-
-          <div class="col-lg-3 col-md-4 col-6 d-flex align-items-center justify-content-center">
-            <img src="assets/img/sponsors/protocase.png" class="img-fluid" alt="Protocase">
-          </div>
-
-          <div class="col-lg-3 col-md-4 col-6 d-flex align-items-center justify-content-center">
-            <img src="assets/img/sponsors/hamamatsu.png" class="img-fluid" alt="Hamamatsu">
-          </div>
-
-          <div class="col-lg-3 col-md-4 col-6 d-flex align-items-center justify-content-center">
-            <img src="assets/img/sponsors/industrial-metal-supply.png" class="img-fluid" alt="Industrial Metal Supply">
-          </div>
-
-          <div class=" col-lg-3 col-md-4 col-6 d-flex align-items-center justify-content-center">
-            <img src="assets/img/sponsors/khalil.png" class="img-fluid" alt="Kammace">
-          </div>
-        </row>
-
-      </div>
-    </section>
-    <!-- ======= End Sponsors Section ======= -->
-
     <!-- ======= Gallery Section ======= -->
     <section id="gallery" class="gallery">
       <div class="container" data-aos="zoom-in">
@@ -483,42 +436,70 @@
           <div class="gallery-item">
             <img src="assets/img/gallery/current-team.jpeg" class="gallery-img"
               alt="Picture of current 2023 Robotics team">
-            Current Robotics Team
+            Current Team
           </div>
 
           <div class="gallery-item">
-            <img src="assets/img/gallery/current-leads.jpeg" class="gallery-img" alt="Picture of current 2023 Robotics leads>
-            Current Team Leads
-          </div>
-
-          <div class=" gallery-item">
-            <img src="assets/img/gallery/2019-competition.jpeg" class="gallery-img"
-              alt="Picture of 2019 competition team">
-            2019 Competition Team
+            <img src="assets/img/gallery/current-leads.jpeg" class="gallery-img"
+              alt="Picture of current 2023 Robotics leads">
+            Current Leads
           </div>
 
           <div class="gallery-item">
-            <img src="assets/img/gallery/2018-competition.jpeg" class="gallery-img"
-              alt="Picture of 2018 competition team">
-            2018 Competition Team
+            <img src="assets/img/gallery/gallery-10.jpeg" class="gallery-img"
+              alt="Picture of Team at Youth Outreach Event in San Francisco">
+            Team at Youth Outreach Event in San Francisco
           </div>
 
           <div class="gallery-item">
-            <img src="assets/img/gallery/2017-competition.jpeg" class="gallery-img"
-              alt="Picture of 2017 competition team">
-            2017 Competition Team
+            <img src="assets/img/gallery/gallery-1.jpeg" class="gallery-img"
+              alt="Picture of initial drive system testing">
+            Initial Drive System Testing
           </div>
 
           <div class="gallery-item">
-            <img src="assets/img/gallery/2016-competition.jpeg" class="gallery-img"
-              alt="Picture of 2016 competition team">
-            2016 Competition Team
+            <img src="assets/img/gallery/gallery-3.jpg" class="gallery-img" alt="Picture of initial arm system testing">
+            Initial Arm System Testing
           </div>
 
           <div class="gallery-item">
-            <img src="assets/img/gallery/2015-competition.jpeg" class="gallery-img"
-              alt="Picture of 2015 competition team">
-            2015 Competition Team
+            <img src="assets/img/gallery/gallery-2.jpeg" class="gallery-img" alt="Picture of driving rover around town">
+            Driving Rover Around Town
+          </div>
+
+          <div class="gallery-item">
+            <img src="assets/img/gallery/gallery-4.jpeg" class="gallery-img"
+              alt="Picture of Electrical and Controls team">
+            Electrical, Autonomy & Control Members Working on Various Systems
+          </div>
+
+          <div class="gallery-item">
+            <img src="assets/img/gallery/gallery-5.jpeg" class="gallery-img"
+              alt="Picture of some of the Controls members">
+            Control Members Working on End Effector
+          </div>
+
+          <div class="gallery-item">
+            <img src="assets/img/gallery/gallery-6.jpeg" class="gallery-img"
+              alt="Picture of some of the Electrical members practicing soldering">
+            Electrical Members Practicing Soldering
+          </div>
+
+          <div class="gallery-item">
+            <img src="assets/img/gallery/gallery-7.jpeg" class="gallery-img" alt="Picture of 2020 robot">
+            Controls Member Testing Out the Arm System
+          </div>
+
+          <div class="gallery-item">
+            <img src="assets/img/gallery/gallery-8.jpeg" class="gallery-img"
+              alt="Picture of some of the Mechanical members using drill press">
+            Mechanical Members Drilling Holes in Slip Ring Plate
+          </div>
+
+          <div class="gallery-item">
+            <img src="assets/img/gallery/gallery-9.jpeg" class="gallery-img"
+              alt="Showing the new recruits the current rover">
+            Demoing the Current Rover to New Recruits
           </div>
 
         </div>
@@ -597,6 +578,53 @@
       </div>
     </section>
     <!-- ======= End Contact Section ======= -->
+
+    <!-- ======= Sponsors Section ======= -->
+    <section id="sponsors" class="sponsors">
+      <div class="container" data-aos="zoom-in">
+        <style>
+          h2 {
+            text-align: center;
+          }
+
+          h6 {
+            text-align: center;
+          }
+        </style>
+        <h2>Sponsors</h2>
+        <row class="row">
+          <div class="col-lg-3 col-md-4 col-6 d-flex align-items-center justify-content-center">
+            <img src="assets/img/sponsors/SJSU-ENGR.png" class="img-fluid" alt="San Jose State Engineering Department">
+          </div>
+
+          <div class="col-lg-3 col-md-4 col-6 d-flex align-items-center justify-content-center">
+            <img src="assets/img/sponsors/SJSU-AS.png" class="img-fluid" alt="SJSU Associated Students">
+          </div>
+
+          <div class="col-lg-3 col-md-4 col-6 d-flex align-items-center justify-content-center">
+            <img src="assets/img/sponsors/google.png" class="img-fluid" alt="Google">
+          </div>
+
+          <div class="col-lg-3 col-md-4 col-6 d-flex align-items-center justify-content-center">
+            <img src="assets/img/sponsors/protocase.png" class="img-fluid" alt="Protocase">
+          </div>
+
+          <div class="col-lg-3 col-md-4 col-6 d-flex align-items-center justify-content-center">
+            <img src="assets/img/sponsors/hamamatsu.png" class="img-fluid" alt="Hamamatsu">
+          </div>
+
+          <div class="col-lg-3 col-md-4 col-6 d-flex align-items-center justify-content-center">
+            <img src="assets/img/sponsors/industrial-metal-supply.png" class="img-fluid" alt="Industrial Metal Supply">
+          </div>
+
+          <div class=" col-lg-3 col-md-4 col-6 d-flex align-items-center justify-content-center">
+            <img src="assets/img/sponsors/khalil.png" class="img-fluid" alt="Kammace">
+          </div>
+        </row>
+
+      </div>
+    </section>
+    <!-- ======= End Sponsors Section ======= -->
 
   </main>
   <!-- ======= End #main Section ======= -->
