--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@
       <br>
       <h2 id="sub-slogan">A group of students at San Jose State University</h2>
       <div class="d-flex">
-        <a href="https://www.youtube.com/watch?v=shVuYxo-rjA" class="venobox btn-watch-video" data-vbtype="video"
-          data-autoplay="true"> Watch Video <i class="icofont-play-alt-2"></i></a>
+        <a href="https://www.youtube.com/watch?v=w2MoH3PyD64" class="venobox btn-watch-video" data-vbtype="video"
+          data-autoplay="true">Most Recent Update<i class="icofont-play-alt-3"></i></a>
       </div>
     </div>
     <!-- <img id="video" class="hidden-xs hidden-sm img-fluid" src="assets/img/gallery/current-team.jpeg" alt="" /> -->
