updates website logo and update video link

--- a/index.html
+++ b/index.html
@@ -116,12 +116,11 @@
     <div class="home-container" data-aos="fade-up" data-aos-delay="150">
       <h1 id="slogan">SJSU Robotics</h1>
       <br>
-      <a><img src="assets/img/favicon.png" alt="SJSU Robotics logo" class="img-fluid" width="150" height="146"></a>
+      <a><img id="center-logo" src="assets/img/big-logo.png" alt="SJSU Robotics logo" class="img-fluid" width="45%"></a>
       <br>
       <h2 id="sub-slogan">A group of students at San Jose State University</h2>
       <div class="d-flex">
-        <a href="https://www.youtube.com/watch?v=w2MoH3PyD64" class="venobox btn-watch-video" data-vbtype="video"
-          data-autoplay="true">Most Recent Update<i class="icofont-play-alt-3"></i></a>
+        <a href="https://www.youtube.com/watch?v=-NhHU-igwMQ" target="_blank" rel="noopener noreferrer" class="btn-watch-video" >Most Recent Update<i class="icofont-play-alt-2"></i></a>
       </div>
     </div>
     <!-- <img id="video" class="hidden-xs hidden-sm img-fluid" src="assets/img/gallery/current-team.jpeg" alt="" /> -->
